plugins {
    alias(libs.plugins.android.application)
    id 'com.google.gms.google-services'
    id 'com.google.firebase.crashlytics'
    id 'com.google.firebase.firebase-perf'
}

android {
    namespace 'com.doubleangels.redact'
    compileSdk 36

    defaultConfig {
        applicationId "com.doubleangels.redact"
        minSdk 31
        targetSdk 35
        versionCode 8
        versionName "1.1.4"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
    buildFeatures {
        viewBinding true
    }
}

dependencies {
    implementation platform(libs.firebase.bom)
    implementation(libs.firebase.crashlytics)
    implementation(libs.firebase.analytics)
    implementation(libs.firebase.perf)
    implementation libs.activity
    implementation libs.appcompat
    implementation libs.constraintlayout
    implementation libs.exifinterface
    implementation libs.fragment
    implementation libs.glide
    implementation libs.material.v1110
}
